--- a/index.html
+++ b/index.html
@@ -126,15 +126,21 @@ Welcome Slider
                 <li><a data-scroll href="#body">Home</a></li>
                 <li><a data-scroll href="#about">About Us</a></li>
                 <li><a data-scroll href="#register">Register</a></li>
+                <li><a data-scroll href="#teams">Teams</a></li>
+
                 <li><a data-scroll href="#trek">Treks</a></li>
-                <li><a data-scroll href="#timeline">Timeline</a></li>
+
+                <!-- <li><a data-scroll href="#timeline">Timeline</a></li> -->
                 <li><a data-scroll href="#phases123">Phases</a></li>
+                <li><a data-scroll href="#guides">Guides</a></li>
+                <li><a data-scroll href="#trekD">Trek Details</a></li>
                 <li><a data-scroll href="#sponsors">Sponsors</a></li>
 
-                <li><a data-scroll href="#team">Team</a></li>
+                <!-- <li><a data-scroll href="#team">Team</a></li> -->
                 <li><a data-scroll href="#rules">Rules</a></li>
                 <li><a data-scroll href="#FAQS">FAQs</a></li>
                 <li><a data-scroll href="#contact-us">Contact Us</a></li>
+
                 <li><a data-scroll target="_blank" href="http://www.teamc18.com">TeamC-18</a></li>
 
                 <!-- <li><a data-scroll href="#blog">Blog</a></li> -->
@@ -269,7 +275,7 @@ Start Call To Action
 
 <!-- Start Services Section
 ==================================== -->
-<section id="sponsors" class="pricing section">
+<section id="teams" class="pricing section">
   <div class="container">
     <div class="row <text-center></text-center>">
 
@@ -278,6 +284,7 @@ Start Call To Action
 
         <div class="title text-center wow fadeInDown" data-wow-duration="500ms">
             <h2>Registered <span class="color">Teams </span></h2>
+            <h3>These guys are on their way to success. Where are you?</h3>
           <div class="col-md-4">
             <div class="pricing-wrapper clearfix">
           		<div class="pricing-table recommended">
@@ -909,7 +916,7 @@ The paper submissions will be reviewed and selected papers will be invited to pr
 
 			</div>	<!-- end container -->
 		</section>   <!-- End section -->
-        <section id="Guides" class="bg-one section">
+        <section id="guides" class="bg-one section">
         	<div class="container">
         		<div class="row">
 
@@ -968,7 +975,7 @@ The paper submissions will be reviewed and selected papers will be invited to pr
         	</div>   	<!-- End container -->
         </section>   <!-- End section -->
 
-        <section id="pricing" class="pricing section">
+        <section id="trekD" class="pricing section">
             <div class="container">
                 <div class="row">
 
