added manusheel and idvyanshu in guides

--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@ The paper submissions will be reviewed and selected papers will be invited to pr
         			<!-- /section title -->
 
                     <!-- Single Service Item -->
-        			<article class="col-md-4 col-sm-6 col-md-offset-1 col-xs-12 wow fadeInUp" data-wow-duration="500ms">
+        			<article class="col-md-3 col-sm-6  col-xs-12 wow fadeInUp" data-wow-duration="500ms">
         				<div class="service-block text-center">
         					<div class="service-icon text-center">
         						<!-- <i class="tf-globe"></i> -->
@@ -943,7 +943,7 @@ The paper submissions will be reviewed and selected papers will be invited to pr
                     <!-- End Single Service Item -->
 
                     <!-- Single Service Item -->
-        			<article class="col-md-4 col-sm-6 col-md-offset-2 col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="200ms">
+        			<article class="col-md-3 col-sm-6  col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="200ms">
                         <div class="service-block text-center">
                             <div class="service-icon text-center">
                                 <!-- <i class="tf-globe"></i> -->
@@ -952,6 +952,31 @@ The paper submissions will be reviewed and selected papers will be invited to pr
                             <h3>Mayank Jain</h3>
                             <!-- <h4>Rural and Sub-urban</h4> -->
             <p>Mayank, a gem of NSIT, is automation engineer with 5+ years of experience in technical and social economic sector. He is revolutionizing the world with a aim to improve the social aspects having worked with Global Social Economy Forum, Urban Habitat Summit, Indian Student Parliament, Indo-Afghan Future Workshop, Co-founder of MicroX Foundation which aims to fix the broken food system through sustainable livelihood creation, promoting urban farming and brings producers and consumers closer.</p>
+
+                        </div>
+        			</article>
+                    <article class="col-md-3 col-sm-6  col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="200ms">
+                        <div class="service-block text-center">
+                            <div class="service-icon text-center">
+                                <!-- <i class="tf-globe"></i> -->
+                                <img src="images/guides/manusheel.jpg" alt="" style="height:20vh;">
+                            </div>
+                            <h3>Manusheel Gupta</h3>
+                            <!-- <h4>Rural and Sub-urban</h4> -->
+            <p>Manu Sheel Gupta is the Founder and Director of Aspiring Investments Corp and Software for Education, Entertainment and Training Activities. He has been associated with One Laptop Per Child(OLPC), working closely with governments and organisations in India, US, Paraguay and Sri Lanka. In the social profit sector, he has contributed at Harvard Business School India Trek Schoolhouse Fund Corp (India School Fund). He has also held several other key leadership and technical roles at OLPC.</p>
+
+                        </div>
+        			</article>
+                    <article class="col-md-3 col-sm-6  col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="200ms">
+                        <div class="service-block text-center">
+                            <div class="service-icon text-center">
+                                <!-- <i class="tf-globe"></i> -->
+                                <img src="images/guides/divyanshu.jpg" alt="" style="height:20vh;">
+                            </div>
+                            <h3>Divyanshu Sharma</h3>
+                            <!-- <h4>Rural and Sub-urban</h4> -->
+            <p>Divyanshu Sharma is a junior at Netaji Subas Institute of Technology. He is an explorer and his interests lie both on business and tech side of things. By co- founding FeedMonster Media, he wanted to change how MSMEs market their services digitally.
+He loves building consumer products which touch the lives of common people.</p>
 
                         </div>
         			</article>
