--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ He loves building consumer products which touch the lives of common people.</p>
 
                 </div>
             </article>
-            <article class="col-md-4 col-md-offset-2 col-sm-6  col-xs-12 wow fadeInUp" data-wow-duration="500ms">
+            <article class="col-md-3 col-sm-6  col-xs-12 wow fadeInUp" data-wow-duration="500ms">
                 <div class="service-block text-center">
                     <div class="service-icon text-center">
                         <!-- <i class="tf-globe"></i> -->
@@ -321,7 +321,7 @@ He loves building consumer products which touch the lives of common people.</p>
             <!-- End Single Service Item -->
 
             <!-- Single Service Item -->
-            <article class="col-md-4 col-sm-6  col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="200ms">
+            <article class="col-md-3 col-sm-6  col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="200ms">
                 <div class="service-block text-center">
                     <div class="service-icon text-center">
                         <!-- <i class="tf-globe"></i> -->
@@ -330,6 +330,30 @@ He loves building consumer products which touch the lives of common people.</p>
                     <h3>Mayank Jain</h3>
                     <!-- <h4>Rural and Sub-urban</h4> -->
     <p>Mayank, a gem of NSIT, is automation engineer with 5+ years of experience in technical and social economic sector. He is revolutionizing the world with a aim to improve the social aspects having worked with Global Social Economy Forum, Urban Habitat Summit, Indian Student Parliament, Indo-Afghan Future Workshop, Co-founder of MicroX Foundation which aims to fix the broken food system through sustainable livelihood creation, promoting urban farming and brings producers and consumers closer.</p>
+
+                </div>
+            </article>
+            <article class="col-md-3 col-sm-6  col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="200ms">
+                <div class="service-block text-center">
+                    <div class="service-icon text-center">
+                        <!-- <i class="tf-globe"></i> -->
+                        <img src="images/guides/mukul.jpg" alt="" style="height:20vh;">
+                    </div>
+                    <h3>Mukul Gupta</h3>
+                    <!-- <h4>Rural and Sub-urban</h4> -->
+    <p>Mukul Gupta presently works as a Computer Scientist at Adobe Systems where he works on developing high-performance and distributed cloud based computing systems. He is a Computer Science graduate of the 2013 batch of NSIT. During his college stint, he was passionate about competitive programming and frequently featured in the Indian Top 20 of Codechef monthly contests.</p>
+
+                </div>
+            </article>
+            <article class="col-md-3 col-sm-6  col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="200ms">
+                <div class="service-block text-center">
+                    <div class="service-icon text-center">
+                        <!-- <i class="tf-globe"></i> -->
+                        <img src="images/guides/aarushi.jpeg" alt="" style="height:20vh;">
+                    </div>
+                    <h3>Aarushi Jain</h3>
+                    <!-- <h4>Rural and Sub-urban</h4> -->
+    <p>She is a 2015 Computer Engineering graduate from NSIT. She has always been a keen learner about a big breadth of computer science topics. She had dedicated her final year project to developing an efficient model of wireless sensor network for the smart irrigation application. She has been working with Adobe Systems since the last 2.5 years. During this time she has worked on many interesting projects in Adobe's Digital Marketing and Printing Technologies domain.</p>
 
                 </div>
             </article>
