--- a/index.html
+++ b/index.html
@@ -684,10 +684,10 @@ Start Call To Action
                     </div>
 
 
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                         <div class="pricing-wrapper clearfix">
                       		<div class="pricing-table recommended">
-                      			<!-- <h3 class="pricing-title">Team</h3> -->
+                                                                                                                                                                                                                                                                                                              			<h3 class="pricing-title">Team</h3>
                       			<div class="price" aria-controls="collapseExample" aria-expanded="true" data-target="#show13" data-toggle="collapse">Tesseract<sup></sup></div>
 
                       			<ul id='show13' class="collapse table-list" aria-expanded='true'>
@@ -710,7 +710,7 @@ Start Call To Action
 
                         <div class="border"></div>
                     </div>
-
+ -->
 
             <div class="col-md-4">
                         <div class="pricing-wrapper clearfix">
