--- a/index.html
+++ b/index.html
@@ -684,10 +684,10 @@ Start Call To Action
                     </div>
 
 
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                         <div class="pricing-wrapper clearfix">
                       		<div class="pricing-table recommended">
-                      			<!-- <h3 class="pricing-title">Team</h3> -->
+                                                                                                                                                                                                                                                                                                              			<h3 class="pricing-title">Team</h3>
                       			<div class="price" aria-controls="collapseExample" aria-expanded="true" data-target="#show13" data-toggle="collapse">Tesseract<sup></sup></div>
 
                       			<ul id='show13' class="collapse table-list" aria-expanded='true'>
@@ -710,7 +710,7 @@ Start Call To Action
 
                         <div class="border"></div>
                     </div>
-
+ -->
 
             <div class="col-md-4">
                         <div class="pricing-wrapper clearfix">
@@ -2049,6 +2049,46 @@ Start Our Team
 
 		</div>  	<!-- End row -->
 	</div>   	<!-- End container -->
+</section>   <!-- End section -->
+
+<section id="sponsors" class="parallax-section section section-bg overly">
+  <div class="container">
+    <div class="row" >
+      <!-- section title -->
+      <div class="col-md-12">
+        <div class="title text-center">
+          <h2>Our <span class="color">Sponsors</span></h2>
+          <div class="border"></div>
+        </div>
+      </div>
+      <!-- /section title -->
+    </div>  		<!-- End row -->
+    <div class="col-md-4">
+      <p> </p>
+    </div>
+  <div class="row">  <div class="col-md-4 text-center" >
+      <div class="title text-center">
+    <a href="https://education.github.com/"><img class="img-responsive" src="images/GitHub_Logo_White.png" alt=""></a>
+  </div>
+</div></div>
+<div class="row">
+
+
+<div class="col-md-4">
+<img class="img-responsive" src="images/ictacademy_2016.png" alt="">
+</div>
+
+<div class="col-md-4">
+<a href="https://skillenza.com/"><img class="img-responsive" src="images/skillenza.png" alt=""></a>
+</div>
+
+<div class="col-md-4">
+<img class="img-responsive" src="images/comingsoon.png" alt="">
+</div>
+</div>
+      </div>
+
+	<!-- End container -->
 </section>   <!-- End section -->
 
 
