changed register link

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ Start Call To Action
 				<p>
 				    Register in this new unique and exciting hackathon to win prizes worth a ton.
 				</p>
-                <a href="https://skillenza.com/challenge/hackeam18" target="_blank" class="btn btn-main">Click here to Register</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSckm90OwewqAXCYVRUSWplnj4Ia6PpxYjnybtN4v5uU3LXWQw/viewform" target="_blank" class="btn btn-main">Click here to Register</a>
 			</div>
 		</div> 		<!-- End row -->
 	</div>   	<!-- End container -->
