text justified, sponsor added, dates changed

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ TEAMC 2018 includes Agile Software Development, Data Management, Web Intelligenc
                     </div>
                     <h3>Manusheel Gupta</h3>
                     <!-- <h4>Rural and Sub-urban</h4> -->
-    <p>Manu Sheel Gupta is the Founder and Director of Aspiring Investments Corp and Software for Education, Entertainment and Training Activities. He has been associated with One Laptop Per Child(OLPC), working closely with governments and organisations in India, US, Paraguay and Sri Lanka. In the social profit sector, he has contributed at Harvard Business School India Trek Schoolhouse Fund Corp (India School Fund). He has also held several other key leadership and technical roles at OLPC.</p>
+    <p align="justify">Manu Sheel Gupta is the Founder and Director of Aspiring Investments Corp and Software for Education, Entertainment and Training Activities. He has been associated with One Laptop Per Child(OLPC), working closely with governments and organisations in India, US, Paraguay and Sri Lanka. In the social profit sector, he has contributed at Harvard Business School India Trek Schoolhouse Fund Corp (India School Fund). He has also held several other key leadership and technical roles at OLPC.</p>
 
                 </div>
             </article>
@@ -670,7 +670,7 @@ All teams wishing to participate in the hackathon must register themselves by th
                                             <h3 >PHASE 2</h3>
                                             <h3>Design.Develop.Code</h3>
                                         <h4>
-                                   Teams will now begin the second part of their paper (Part B) that describes the system design of their proposed solution. All teams will be invited to be a part of the hackathon, HACKEAM 2018 during 27-28 Jan 2018. The implementation of their design will be done during the hackathon.
+                                   Teams will now begin the second part of their paper (Part B) that describes the system design of their proposed solution. All teams will be invited to be a part of the hackathon, HACKEAM 2018 during 17-18 February 2018. The implementation of their design will be done during the hackathon.
                                     </h4>
                                 </div>
                         </div>
@@ -1172,50 +1172,54 @@ Start Our Team
         </div>
       </div>
       <!-- /section title -->
-    </div>  		<!-- End row -->
-
-
-
-<div class="row">
-
-  <div class="col-md-4" >
-
-  <a href="https://education.github.com/">
-    <img class="img-responsive" src="images/GitHub_Logo_White.png" alt=""></a>
-
-  </div>
-
-<div class="col-md-4">
-  <p>&nbsp;
-  </p>
-<img class="img-responsive" src="images/ictacademy_2016.png" alt="">
-<p>&nbsp;
-</p>
-</div>
-
-<div class="col-md-4">
-  <p>&nbsp;
-  </p>
-<a href="https://skillenza.com/"><img class="img-responsive" src="images/skillenza.png" alt=""></a>
-
-</div>
-<div class="col-md-4 col-md-offset-4  col-sm-6 col-xs-12  wow fadeInDown text-centers">
-  <img class="img-responsive" src="" alt="">
-      </div>
     </div>
 
-<div class= "row">
-      <div class="col-md-4" >
+    <div class= "row">
+          <div class="col-md-4 col-xs-12" >
+<p>&nbsp;
+</p>
 
-      <a href="https://developer.amazon.com/alexa-skills-kit/alexa-skills-developer-training">
-        <img class="img-responsive" src="images/Amazon_Alexa_Horizontal_RGB_White-Color.png" alt=""></a>
-</div>
-      </div>
+<p>&nbsp;
+</p>
+          <a href="https://developer.amazon.com/alexa-skills-kit/alexa-skills-developer-training">
+            <img class="img-responsive" src="images/Amazon_Alexa_Horizontal_RGB_White-Color.png" alt=""></a>
+    </div>
+
+    <div class="col-md-4 col-xs-12">
+      <a href="http://get.tech/">
+        <img class="img-responsive" src="images/rArtboard 1@2x.png" alt=""></a>
+    </div>
+
+    <div class="col-md-4 col-xs-12">
+      <a href="https://www.jetbrains.com/">
+        <img class="img-responsive" src="images/jetbrains-variant-4.png" alt=""></a>
+    </div>
+          </div>
+
+          <div class= "row">
+                <div class="col-md-4 col-xs-12" >
+                  <p>&nbsp;
+                  </p>
+                <a href="https://skillenza.com/">
+                  <img class="img-responsive" src="images/skillenza.png" alt=""></a>
+          </div>
+
+          <div class="col-md-4 col-xs-12">
+            <a href="https://education.github.com/">
+              <img class="img-responsive" src="images/GitHub_Logo_White.png" alt=""></a>
+          </div>
+
+          <div class="col-md-4 col-xs-12">
+            <p>&nbsp;
+            </p>
+            <a href="http://www.ictacademy.in/pages/index.aspx">
+              <img class="img-responsive" src="images/ictacademy_2016.png" alt=""></a>
+          </div>
+                </div>
+                              	<!-- End row -->
+    </div>
 	<!-- End container -->
 </section>   <!-- End section -->
-
-
-
 
 
 
@@ -1261,7 +1265,7 @@ The place of interest of treks may be chosen by participants themselves but shou
                             </h3>
                         </div>
                         <div class="item  ">
-                          <h3>7. Teams will begin the second part of paper,  part B ( for more details, visit <a href="https://www.teamc18.com">www.teamc18.com.</a>) , and will be invited to be a part of HACKEAM 2018 during 27-28 Jan. </h3>
+                          <h3>7. Teams will begin the second part of paper,  part B ( for more details, visit <a href="https://www.teamc18.com">www.teamc18.com.</a>) , and will be invited to be a part of HACKEAM 2018 during 17-18th February. </h3>
                         </div>
                         <div class="item  ">
                             <h3>8. Last date for completion and submission of paper(both part A and part B)  is 28th Feb, 2018. Late entries will not be entertained. </h3>
