treks undergone fix

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ TEAMC 2018 includes Agile Software Development, Data Management, Web Intelligenc
                     </div>
                     <h3>Naveen Gupta</h3>
                     <!-- <h4>Rural and Sub-urban</h4> -->
-    <p>Naveen Gupta, M.Com, M.C.A. and M.Phil has been a mentor to countless students and teachers, helping them achieve great heights of success. Currently the head of the IT division of St. Mark's School, his students boast several prestigious awards at national and international level competitions. He is a passionate teacher and imbibes a goal-oriented and dream-driven motivation in his pupils. Recognised and appreciated for his service, he has contributed to CBSE in some very dignified positions. To encourage the exhibition of one's creations for critical evaluations, he has organised many events including National and International Tect-Fest "Geek-a-Hertz".</p>
+    <p align="justify">Naveen Gupta, M.Com, M.C.A. and M.Phil has been a mentor to countless students and teachers, helping them achieve great heights of success. Currently the head of the IT division of St. Mark's School, his students boast several prestigious awards at national and international level competitions. He is a passionate teacher and imbibes a goal-oriented and dream-driven motivation in his pupils. Recognised and appreciated for his service, he has contributed to CBSE in some very dignified positions. To encourage the exhibition of one's creations for critical evaluations, he has organised many events including National and International Tect-Fest "Geek-a-Hertz".</p>
 
                 </div>
             </article>
@@ -303,7 +303,7 @@ TEAMC 2018 includes Agile Software Development, Data Management, Web Intelligenc
                     </div>
                     <h3>Divyanshu Sharma</h3>
                     <!-- <h4>Rural and Sub-urban</h4> -->
-    <p>Divyanshu Sharma is a junior at Netaji Subas Institute of Technology. He is an explorer and his interests lie both on business and tech side of things. By co- founding FeedMonster Media, he wanted to change how MSMEs market their services digitally.
+    <p align="justify">Divyanshu Sharma is a junior at Netaji Subas Institute of Technology. He is an explorer and his interests lie both on business and tech side of things. By co- founding FeedMonster Media, he wanted to change how MSMEs market their services digitally.
 He loves building consumer products which touch the lives of common people.</p>
 
                 </div>
@@ -316,7 +316,7 @@ He loves building consumer products which touch the lives of common people.</p>
                     </div>
                     <h3>Aman Goyal</h3>
                     <!-- <h4>Education</h4> -->
-    <p>Aman Goyal presently works as a Big Data engineer in Guavus Networks. He has a dynamic professional carrier with previous associations with organizations like SAP, Shopzilla, Yes Bank , and InfoEdge. Aman is a Computer Science graduate of the 2012 batch of NSIT. He believes in continuous learning and is also an Associate Professor at EduPristine where he delivers classroom sessions on Big Data, Unix and Java. Also a sports enthusiast, he brings a unique perspective to the table.</p>
+    <p align="justify">Aman Goyal presently works as a Big Data engineer in Guavus Networks. He has a dynamic professional carrier with previous associations with organizations like SAP, Shopzilla, Yes Bank , and InfoEdge. Aman is a Computer Science graduate of the 2012 batch of NSIT. He believes in continuous learning and is also an Associate Professor at EduPristine where he delivers classroom sessions on Big Data, Unix and Java. Also a sports enthusiast, he brings a unique perspective to the table.</p>
 
                 </div>
             </article>
@@ -331,7 +331,7 @@ He loves building consumer products which touch the lives of common people.</p>
                     </div>
                     <h3>Mayank Jain</h3>
                     <!-- <h4>Rural and Sub-urban</h4> -->
-    <p>Mayank, a gem of NSIT, is automation engineer with 5+ years of experience in technical and social economic sector. He is revolutionizing the world with a aim to improve the social aspects having worked with Global Social Economy Forum, Urban Habitat Summit, Indian Student Parliament, Indo-Afghan Future Workshop, Co-founder of MicroX Foundation which aims to fix the broken food system through sustainable livelihood creation, promoting urban farming and brings producers and consumers closer.</p>
+    <p align="justify">Mayank, a gem of NSIT, is automation engineer with 5+ years of experience in technical and social economic sector. He is revolutionizing the world with a aim to improve the social aspects having worked with Global Social Economy Forum, Urban Habitat Summit, Indian Student Parliament, Indo-Afghan Future Workshop, Co-founder of MicroX Foundation which aims to fix the broken food system through sustainable livelihood creation, promoting urban farming and brings producers and consumers closer.</p>
 
                 </div>
             </article>
@@ -343,7 +343,7 @@ He loves building consumer products which touch the lives of common people.</p>
                     </div>
                     <h3>Mukul Gupta</h3>
                     <!-- <h4>Rural and Sub-urban</h4> -->
-    <p>Mukul Gupta presently works as a Computer Scientist at Adobe Systems where he works on developing high-performance and distributed cloud based computing systems. He is a Computer Science graduate of the 2013 batch of NSIT. During his college stint, he was passionate about competitive programming and frequently featured in the Indian Top 20 of Codechef monthly contests.</p>
+    <p align="justify">Mukul Gupta presently works as a Computer Scientist at Adobe Systems where he works on developing high-performance and distributed cloud based computing systems. He is a Computer Science graduate of the 2013 batch of NSIT. During his college stint, he was passionate about competitive programming and frequently featured in the Indian Top 20 of Codechef monthly contests.</p>
 
                 </div>
             </article>
@@ -355,7 +355,7 @@ He loves building consumer products which touch the lives of common people.</p>
                     </div>
                     <h3>Aarushi Jain</h3>
                     <!-- <h4>Rural and Sub-urban</h4> -->
-    <p>She is a 2015 Computer Engineering graduate from NSIT. She has always been a keen learner about a big breadth of computer science topics. She had dedicated her final year project to developing an efficient model of wireless sensor network for the smart irrigation application. She has been working with Adobe Systems since the last 2.5 years. During this time she has worked on many interesting projects in Adobe's Digital Marketing and Printing Technologies domain.</p>
+    <p align="justify">She is a 2015 Computer Engineering graduate from NSIT. She has always been a keen learner about a big breadth of computer science topics. She had dedicated her final year project to developing an efficient model of wireless sensor network for the smart irrigation application. She has been working with Adobe Systems since the last 2.5 years. During this time she has worked on many interesting projects in Adobe's Digital Marketing and Printing Technologies domain.</p>
 
                 </div>
             </article>
