--- a/index.html
+++ b/index.html
@@ -790,8 +790,8 @@ The paper submissions will be reviewed and selected papers will be invited to pr
                     <!-- <a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-1.jpg" data-lightbox="image-1">
                         <i class="fa fa-flask"></i>
                     </a> -->
-                    <h4><a href="">AFMC base hostpital</a></h4>
-                    <p>Team Vector</p>
+                    <h4><a href="">GTB Hospital</a></h4>
+                    <p>Reboot Rebels</p>
                 </div>
             </div>
         </div>
