--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@ All teams wishing to participate in the hackathon must register themselves by th
                                             <h3 >PHASE 2</h3>
                                             <h3>Design.Develop.Code</h3>
                                         <h4>
-                                   Teams will now begin the second part of their paper (Part B) that describes the system design of their proposed solution. All teams will be invited to be a part of the hackathon, HACKEAM 2018 during 17-18 February 2018. The implementation of their design will be done during the hackathon.
+                                   Teams will now begin the second part of their paper (Part B) that describes the system design of their proposed solution. All teams will be invited to be a part of the hackathon, HACKEAM 2018 during 10-11 February 2018. The implementation of their design will be done during the hackathon.
                                     </h4>
                                 </div>
                         </div>
@@ -1181,6 +1181,9 @@ Start Our Team
 
 <p>&nbsp;
 </p>
+
+<p>&nbsp;
+</p>
           <a href="https://developer.amazon.com/alexa-skills-kit/alexa-skills-developer-training">
             <img class="img-responsive" src="images/Amazon_Alexa_Horizontal_RGB_White-Color.png" alt=""></a>
     </div>
@@ -1265,7 +1268,7 @@ The place of interest of treks may be chosen by participants themselves but shou
                             </h3>
                         </div>
                         <div class="item  ">
-                          <h3>7. Teams will begin the second part of paper,  part B ( for more details, visit <a href="https://www.teamc18.com">www.teamc18.com.</a>) , and will be invited to be a part of HACKEAM 2018 during 17-18th February. </h3>
+                          <h3>7. Teams will begin the second part of paper,  part B ( for more details, visit <a href="https://www.teamc18.com">www.teamc18.com.</a>) , and will be invited to be a part of HACKEAM 2018 during 10-11th February. </h3>
                         </div>
                         <div class="item  ">
                             <h3>8. Last date for completion and submission of paper(both part A and part B)  is 28th Feb, 2018. Late entries will not be entertained. </h3>
