temboo-sponsor added

--- a/index.html
+++ b/index.html
@@ -1213,12 +1213,19 @@ Start Our Team
           </div>
 
           <div class="col-md-4 col-xs-12">
-            <p>&nbsp;
-            </p>
-            <a href="http://www.ictacademy.in/pages/index.aspx">
-              <img class="img-responsive" src="images/ictacademy_2016.png" alt=""></a>
+            <a href="https://temboo.com/">
+              <img class="img-responsive" src="images/temboo-logo-white.png" alt=""></a>
           </div>
                 </div>
+
+                <div class="row">
+                  <div class="col-md-4 col-xs-12">
+                  <p>&nbsp;
+                  </p>
+                  <a href="http://www.ictacademy.in/pages/index.aspx">
+                    <img class="img-responsive" src="images/ictacademy_2016.png" alt=""></a>
+                </div>
+              </div>
                               	<!-- End row -->
     </div>
 	<!-- End container -->
