--- a/index.html
+++ b/index.html
@@ -1220,6 +1220,29 @@ Start Our Team
 
                 <div class="row">
                   <div class="col-md-4 col-xs-12">
+                    <p>&nbsp;
+                    </p>
+                  <a href="">
+                    <img class="img-responsive" src="images/Background (1).png" alt=""></a>
+                  </div>
+                  <div class="col-md-4 col-xs-12">
+                    <p>&nbsp;
+                    </p>
+                    <p>&nbsp;
+                    </p>
+                  <a href="">
+                    <img class="img-responsive" src="images/gfg1.png" alt=""></a>
+                  </div>
+
+                  <div class="col-md-4 col-xs-12">
+                    <p>&nbsp;
+                    </p>
+                    <p>&nbsp;
+                    </p>
+                  <a href="">
+                    <img class="img-responsive" src="images/sketch-logo-dark-transparent@2x.png" alt=""></a>
+                  </div>
+                  <div class="col-md-4 col-xs-12">
                   <p>&nbsp;
                   </p>
                   <a href="http://www.ictacademy.in/pages/index.aspx">
