--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ Start Call To Action
 			<div class="col-md-12 text-center">
 				<h2>Register</h2>
 				<p>
-				    Registeration Over!<br/>
+				    Registeration Over!
 
 				</p>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSckm90OwewqAXCYVRUSWplnj4Ia6PpxYjnybtN4v5uU3LXWQw/viewform" target="_blank" class="btn btn-main" disabled> Come Back Next time.</a>
