--- a/index.html
+++ b/index.html
@@ -68,23 +68,26 @@
 Welcome Slider
 ==================================== -->
 
+
 <section class="hero-area">
-    <div class="top-logo1">
-        <img src='images/nsit-white.jpg'>
+
+    <div class="video-button NSITvideo-button pull-right col-xs-4">
+        <img src='images/logos/TC LOGO.png'   max-width: "100%"
+    height="auto" />
     </div>
-    <div class="top-logo2">
-        <img src='images/teamc-logo.jpg'>
+
+    <div class="video-button TEAMCvideo-button pull-left col-xs-4">
+        <img src='images/logos/NSIT-Logo.png' max-width: "100%"
+    height="auto" />
     </div>
-    <div class="video-button NSITvideo-button">
-        <img src='images/logos/TC LOGO.png' />
-    </div>
-    <div class="video-button TEAMCvideo-button">
-        <img src='images/logos/NSIT-Logo.png' />
-    </div>
-	<div class="block">
-		<div class="video-button">
-			<img src='images/HACKEAM.png' />
+	<div class="block" style="text-align: center;">
+
+		<div class="video-button" style="text-align: center;">
+			<img src='images/HACKEAM.png'  max-width: "100%"
+  height="auto" />
 		</div>
+
+
     <!-- Styles -->
 <style style="text/css">
 .example1 {
@@ -132,7 +135,7 @@ Welcome Slider
  }
 }
 </style>
-		<h1>HACKEAM-18</h1>
+		<h1 class="text-center" align="center">HACKEAM-18</h1>
         <p>Trek. Report. Hack. Adapt. Achieve</p>
         <br/>
         <marquee behavior="scroll" direction="right"><h3 style="color: #FFC107">Last Day to Submit Report of PHASE 1</h3></marquee>
