--- a/index.html
+++ b/index.html
@@ -67,15 +67,32 @@
  <!--
 Welcome Slider
 ==================================== -->
+<style type="text/css">
+.box{
+    text-align: right;
+}
+.absolute-right{
+    display: inline-block;
+    position: absolute;
+}
 
+/*The magic:*/
+.absolute-right{
+-moz-transform: translateX(-100%);
+-ms-transform: translateX(-100%);
+-webkit-transform: translateX(-100%);
+-o-transform: translateX(-100%);
+transform: translateX(-100%);
+}
+</style>
 
 <section class="hero-area">
-
+<div class="box">
     <div class="video-button NSITvideo-button pull-right col-xs-4">
         <img src='images/logos/TC LOGO.png'   max-width: "100%"
     height="auto" />
     </div>
-
+  </div>
     <div class="video-button TEAMCvideo-button pull-left col-xs-4">
         <img src='images/logos/NSIT-Logo.png' max-width: "100%"
     height="auto" />
