explore us removed

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@ transform: translateX(-100%);
         <marquee behavior="alternate"><h3 style="color: #FF9800"> 27th January 2018</h3></marquee>
 
 <div class="row text-center">
+  <div class="col-xs-12">
         <div id="clockdiv">
         <div>
           <span class="days"></span>
@@ -177,9 +178,9 @@ transform: translateX(-100%);
           <div class="smalltext">Seconds</div>
         </div>
       </div>
+    </div>
 </div>
 		<!-- <p><span class="color">T</span>rek/. <span class="color">E</span>xplore. <span class="color">A</span>nalyse. <span class="color">M</span>odel. <span class="color">C</span>onquer</p> -->
-		<a data-scroll href="#about" class="btn btn-transparent">Explore Us</a>
 
   </div>
 
