--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@ transform: translateX(-100%);
 <section class="hero-area">
 <div class="box">
     <div class="video-button NSITvideo-button pull-right col-xs-4">
-        <img src='images/logos/TC LOGO.png'   max-width: "100%"
+        <img src='images/logos/TC LOGO.png' max-width: "100%"
     height="auto" />
     </div>
   </div>
     <div class="video-button TEAMCvideo-button pull-left col-xs-4">
-        <img src='images/logos/NSIT-Logo.png' max-width: "100%"
+        <img src='images/logos/NSIT-Logo.png' max-width = "100%"
     height="auto" />
     </div>
 	<div class="block" style="text-align: center;">
