--- a/index.html
+++ b/index.html
@@ -1296,60 +1296,77 @@ Start Our Team
     </div>
 
     <div class="col-md-4 col-xs-12">
+      <p>&nbsp;
+      </p>
       <a href="http://get.tech/">
         <img class="img-responsive" src="images/rArtboard 1@2x.png" alt=""></a>
     </div>
 
     <div class="col-md-4 col-xs-12">
+      <p>&nbsp;
+      </p>
       <a href="https://www.jetbrains.com/">
         <img class="img-responsive" src="images/jetbrains-variant-4.png" alt=""></a>
     </div>
           </div>
 
           <div class= "row">
-                <div class="col-md-4 col-xs-12" >
+                <div class="col-md-4 col-xs-12 text-center" >
+                  <p>&nbsp;
+                  </p>
                   <p>&nbsp;
                   </p>
                 <a href="https://skillenza.com/">
-                  <img class="img-responsive" src="images/skillenza.png" alt=""></a>
+                  <img class="img-responsive" src="images/skillenza transparent.png" alt=""></a>
           </div>
 
-          <div class="col-md-4 col-xs-12">
+          <div class="col-md-4 col-xs-12 text-center">
+            <p>&nbsp;
+            </p>
+            <p>&nbsp;
+            </p>
             <a href="https://education.github.com/">
               <img class="img-responsive" src="images/GitHub_Logo_White.png" alt=""></a>
           </div>
 
-          <div class="col-md-4 col-xs-12">
+          <div class="text-center col-md-4 col-xs-12 text-center">
+            <p>&nbsp;
+            </p>
             <a href="https://temboo.com/">
               <img class="img-responsive" src="images/temboo-logo-white.png" alt=""></a>
           </div>
                 </div>
 
                 <div class="row">
-                  <div class="col-md-4 col-xs-12">
+                  <div class="col-md-4 col-xs-12 text-center">
                     <p>&nbsp;
                     </p>
                   <a href="">
                     <img class="img-responsive" src="images/Background (1).png" alt=""></a>
                   </div>
-                  <div class="col-md-4 col-xs-12">
+                  <div class="col-md-4 col-xs-12 text-center">
                     <p>&nbsp;
                     </p>
                     <p>&nbsp;
                     </p>
-                  <a href="">
+                  <a href="https://www.geeksforgeeks.org/">
                     <img class="img-responsive" src="images/gfg1.png" alt=""></a>
                   </div>
 
-                  <div class="col-md-4 col-xs-12">
+                  <div class="col-md-4 col-xs-12 text-center">
                     <p>&nbsp;
                     </p>
                     <p>&nbsp;
                     </p>
-                  <a href="">
+                  <a href="https://www.sketchapp.com/">
                     <img class="img-responsive" src="images/sketch-logo-dark-transparent@2x.png" alt=""></a>
                   </div>
 
+              </div>
+              <div class="row">
+                <div class="col-md-4 col-xs-12 text-center">
+                  <a href="https://ubidots.com/"><img class="img-responsive" src="images/logo-ubidots.png"></a>
+                </div>
               </div>
                               	<!-- End row -->
     </div>
