navigation bar updated

--- a/index.html
+++ b/index.html
@@ -243,6 +243,8 @@ transform: translateX(-100%);
                 <li><a data-scroll href="#phases123">Phases</a></li>
                 <li><a data-scroll href="#guides">Guides</a></li>
                 <li><a data-scroll href="#trekD">Trek Details</a></li>
+                <li><a data-scroll href="#team">Our Team</a></li>
+                <li><a data-scroll href="#sponsors">Sponsors</a></li>
                 <!-- <li><a data-scroll href="#sponsors">Sponsors</a></li> -->
 
                 <!-- <li><a data-scroll href="#team">Team</a></li> -->
