wolfram logo added

--- a/index.html
+++ b/index.html
@@ -1370,6 +1370,11 @@ Start Our Team
                 <div class="col-md-4 col-xs-12 text-center">
                   <a href="https://ubidots.com/"><img class="img-responsive" src="images/logo-ubidots.png"></a>
                 </div>
+                <div class="col-md-4 col-xs-12 text-center">
+                  <p>&nbsp;
+                  </p>
+                  <a href="http://www.wolfram.com/hackathons/"><img class="img-responsive" src="images/Hackathon Logo Wolfram 2018 Vector.png"></a>
+                </div>
               </div>
                               	<!-- End row -->
     </div>
