--- a/index.html
+++ b/index.html
@@ -1375,6 +1375,11 @@ Start Our Team
                   </p>
                   <a href="http://www.wolfram.com/hackathons/"><img class="img-responsive" src="images/Hackathon Logo Wolfram 2018 Vector.png"></a>
                 </div>
+                <div class="col-md-4 col-xs-12 text-center">
+                  <p>&nbsp;
+                  </p>
+                  <a href="http://www.johnsnowlabs.com/"><img class="img-responsive text-center center" src="images/john-snow-labs-logo.png"></a>
+                </div>
               </div>
                               	<!-- End row -->
     </div>
