--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@ transform: translateX(-100%);
 		<h1 class="text-center" align="center">HACKEAM-18</h1>
         <p>Trek. Report. Hack. Adapt. Achieve</p>
         <br/>
-      <h3 style="color: #FFC107">Last Date to Submit Report of PHASE 1</h3>
-        <marquee behavior="alternate"><h3 style="color: #FF9800"> 30th January 2018</h3></marquee>
+      <h3 style="color: #FFC107">Hackathon will be held on</h3>
+        <marquee behavior="alternate"><h3 style="color: #FF9800"> 10th February 2018</h3></marquee>
 
 <div class="row text-center">
   <div class="col-xs-12">
