--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="HACKEAM18">
 
-        <meta name="author" content="pratyush goel">
+        <meta name="author" content="pratyush goel Shubham singh">
 
         <title>Hackeam-18</title>
 
@@ -1381,6 +1381,16 @@ Start Our Team
                   <a href="http://www.johnsnowlabs.com/"><img class="img-responsive text-center center" src="images/john-snow-labs-logo.png"></a>
                 </div>
               </div>
+<div class="row">
+<div class="col-md-4 col-xs-12 text-center">
+  <p>&nbsp;
+  </p>
+
+<a href="http://www.hackerearth.com/"><img class="img-responsive" src="images/HE_logo.png"/></a>
+
+</div>
+</div>
+
                               	<!-- End row -->
     </div>
 	<!-- End container -->
